@@ -1,3 +1,11 @@
+2009-07-16  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/AssemblyFactory.cs
+	* Mono.Cecil.Metadata/MetadataWriter.cs
+	* Mono.Cecil.Binary/ImageWriter.cs:
+		Support for properly writing 4.0 dlls.
+		Patch by Carlo Kok  <ck@remobjects.com>.
+
 2009-06-05  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/BaseAssemblyResolver.cs: properly look for the 4.0 corlib
